Initial implementation for initial tick of current interval
